// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initializeGitRepo should initialize a git repo with a message and a branch from the special template values 1`] = `
Array [
  Array [
    "git",
    Array [
      "init",
    ],
    "repoPathMock",
  ],
  Array [
    "git",
    Array [
      "add",
      ".",
    ],
    "repoPathMock",
  ],
  Array [
    "git",
    Array [
      "commit",
      "-minitialCommitMessageMock",
      "--quiet",
    ],
    "repoPathMock",
  ],
  Array [
    "git",
    Array [
      "branch",
      "-m",
      "primaryBranchNameMock",
    ],
    "repoPathMock",
  ],
]
`;

exports[`initializeGitRepo should initialize a git repo with a passable commit message on the main branch 1`] = `
Array [
  Array [
    "git",
    Array [
      "init",
    ],
    "repoPathMock",
  ],
  Array [
    "git",
    Array [
      "add",
      ".",
    ],
    "repoPathMock",
  ],
  Array [
    "git",
    Array [
      "commit",
      "-mfeat(generation): initial commit",
      "--quiet",
    ],
    "repoPathMock",
  ],
  Array [
    "git",
    Array [
      "branch",
      "-m",
      "main",
    ],
    "repoPathMock",
  ],
]
`;
